# OpenMP-MPI

./: .gitignore  Makefile  README.md  merge_referee_sensors.sh  test.sh
data/: balls.csv  metadata.json  players.csv
include/: game.h
oracle/: interruptions_stream.csv  metadata.json  notebook-data-exploration.ipynb  parser.py  referee_ts_converter.py  result3m_30s.txt  script.py
original-data/: 1st-half.csv  2nd-half.csv
report/: main.tex
results/: serial_parallel_3m_30s_M100-50-400.txt
results/results_gcloud/: result_1m_10_200_parallel.txt  result_1m_10s_200_serial.txt  result_1m_20_200_parallel.txt  result_1m_20s_200_serial.txt  result_1m_30_200_parallel.txt  result_1m_30s_200_serial.txt  result_1m_40_200_parallel.txt  result_1m_40s_200_serial.txt  result_1m_50_200_parallel.txt  result_1m_50s_200_serial.txt  result_1m_60_200_parallel.txt  result_1m_60s_200_serial.txt  result_2m_10_200_parallel.txt  result_2m_10s_200_serial.txt  result_2m_20_200_parallel.txt  result_2m_20s_200_serial.txt  result_2m_30_200_parallel.txt  result_2m_30s_200_serial.txt  result_2m_40_200_parallel.txt  result_2m_40s_200_serial.txt  result_2m_50_200_parallel.txt  result_2m_50s_200_serial.txt  result_2m_60_200_parallel.txt  result_2m_60s_200_serial.txt  result_3m_10_200_parallel.txt  result_3m_10s_200_serial.txt  (+36 more)
src/: CMakeLists.txt  Dockerfile  ex-full-game.csv  game.h  main.cpp  parsers.cpp
src/data/: merged.csv
src/data/referee-events/game-interruption/: 1st-half.csv
src/referee-events/game-interruption/: 1st-half.csv  2nd-half.csv
src/results/: 30s_3m.txt
(+3 files in other folders)
